@@ -49,7 +49,7 @@ elseif(WIN32)
 	install(FILES ${extra_libs} DESTINATION ${CMAKE_INSTALL_BINDIR})
 else()
 	set(helper_name linuxdeploy-x86_64.AppImage)
-	set(helper_flags "--plugin;qt;--output;appimage")
+	set(helper_flags "--plugin;qt;--plugin;gstreamer;--output;appimage")
 	set(path_flags "--appdir")
 	set(extra_exe_flag "--executable=")
 	set(app_path "")
